--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -1,3 +1,6 @@
+@import 'styles/colors.scss';
+@import 'styles/dimensions.scss';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,4 +10,5 @@ body {
   -moz-osx-font-smoothing: grayscale;
   padding: 0;
   box-sizing: border-box;
+  background: var(--background-color);
 }
