--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -12,3 +12,13 @@ body {
   box-sizing: border-box;
   background: var(--background-color);
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
