--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,5 +1,7 @@
 :root {
   --background-color: hsl(0 0% 87%);
 
+  --color-black: hsl(0 0% 0%);
+  --color-gray: hsl(0 0% 33%);
   --color-white: hsl(0 0% 100%);
 }
