adds padding to post cards

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -1,3 +1,12 @@
+@import '../../styles/breakpoints.scss';
+
 article {
   background: var(--color-white);
+  padding: var(--spacing-small);
+}
+
+@media screen and(min-width: $desktopBreakpoint) {
+  article {
+    padding: var(--spacing-normal);
+  }
 }
