--- a/src/index.module.scss
+++ b/src/index.module.scss
@@ -27,8 +27,10 @@ p {
 a {
   color: var(--color-black);
   text-decoration: none;
+  transition: all 0.3s ease-in-out;
 
   &:hover {
     color: var(--color-gray);
+    transition: all 0.3s ease-in-out;
   }
 }
